--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -133,6 +133,253 @@
         </table>
       </div>
       <div class="option">
+        <h1>Separate Hold Shelf Action List</h1>
+        <p>On the Hold Shelf Action List, you can select from the list of collection codes below to filter those materials into a separate alphabetical list below the standard list of lapsed holds. This is useful for libraries who shelve their CDs or other AV materials separate from their other holds.</p>
+        <fieldset>
+          <legend>CDs <label class="switch" id="sepAllCDSwitch">
+              <input type="checkbox" id="sepAllCD">
+              <span class="slider"></span>
+            </label>
+          </legend>
+          <table>
+            <tr>
+              <td>
+                <label class="switch" id="cdamsSwitch">
+                  <input type="checkbox" id="cdams">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="cdams">CDAMS</label></td>
+              <td>
+                <label class="switch" id="cdamsidSwitch">
+                  <input type="checkbox" id="cdamsid">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="cdamsid">CDAMSID</label></td>
+              <td>
+                <label class="switch" id="cdjmsSwitch">
+                  <input type="checkbox" id="cdjms">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="cdjms">CDJMS</label></td>
+              <td>
+                <label class="switch" id="cdymsSwitch">
+                  <input type="checkbox" id="cdyms">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="cdyms">CDYMS</label></td>
+            </tr>
+          </table>
+        </fieldset>
+        <fieldset>
+          <legend>DVDs/Blu-ray <label class="switch" id="sepAllDVDSwitch">
+              <input type="checkbox" id="sepAllDVD">
+              <span class="slider"></span>
+            </label>
+          </legend>
+          <table>
+            <tr>
+              <td>
+                <label class="switch" id="dbrafeSwitch">
+                  <input type="checkbox" id="dbrafe">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dbrafe">DBRAFE</label></td>
+              <td>
+                <label class="switch" id="dbraffSwitch">
+                  <input type="checkbox" id="dbraff">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dbraff">DBRAFF</label></td>
+              <td>
+                <label class="switch" id="dbraidSwitch">
+                  <input type="checkbox" id="dbraid">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dbraid">DBRAID</label></td>
+              <td>
+                <label class="switch" id="dbranfSwitch">
+                  <input type="checkbox" id="dbranf">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dbranf">DBRANF</label></td>
+              <td>
+                <label class="switch" id="dbrarnSwitch">
+                  <input type="checkbox" id="dbrarn">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dbrarn">DBRARN</label></td>
+              <td>
+            </tr>
+            <tr>
+              <td>
+                <label class="switch" id="dbratvSwitch">
+                  <input type="checkbox" id="dbratv">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dbratv">DBRATV</label></td>
+              <td>
+                <label class="switch" id="dbrjSwitch">
+                  <input type="checkbox" id="dbrj">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dbrj">DBRJ</label></td>
+              <td>
+                <label class="switch" id="dvdafeSwitch">
+                  <input type="checkbox" id="dvdafe">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdafe">DVDAFE</label></td>
+              <td>
+                <label class="switch" id="dvdaffSwitch">
+                  <input type="checkbox" id="dvdaff">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdaff">DVDAFF</label></td>
+              <td>
+                <label class="switch" id="dvdaidSwitch">
+                  <input type="checkbox" id="dvdaid">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdaid">DVDAID</label></td>
+            </tr>
+            <tr>
+              <td>
+                <label class="switch" id="dvdanfSwitch">
+                  <input type="checkbox" id="dvdanf">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdanf">DVDANF</label></td>
+              <td>
+                <label class="switch" id="dvdarnSwitch">
+                  <input type="checkbox" id="dvdarn">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdarn">DVDARN</label></td>
+              <td>
+                <label class="switch" id="dvdatvSwitch">
+                  <input type="checkbox" id="dvdatv">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdatv">DVDATV</label></td>
+              <td>
+                <label class="switch" id="dvdawlSwitch">
+                  <input type="checkbox" id="dvdawl">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdawl">DVDAWL</label></td>
+              <td>
+                <label class="switch" id="dvdjfeSwitch">
+                  <input type="checkbox" id="dvdjfe">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdjfe">DVDJFE</label></td>
+            </tr>
+            <tr>
+              <td>
+                <label class="switch" id="dvdjhlSwitch">
+                  <input type="checkbox" id="dvdjhl">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdjhl">DVDJHL</label></td>
+              <td>
+                <label class="switch" id="dvdjnfSwitch">
+                  <input type="checkbox" id="dvdjnf">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdjnf">DVDJNF</label></td>
+              <td>
+                <label class="switch" id="dvdjwlSwitch">
+                  <input type="checkbox" id="dvdjwl">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdjwl">DVDJWL</label></td>
+              <td>
+                <label class="switch" id="dvdyfeSwitch">
+                  <input type="checkbox" id="dvdyfe">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="dvdyfe">DVDYFE</label></td>
+            </tr>
+          </table>
+        </fieldset>
+        <fieldset>
+          <legend>Other <label class="switch" id="sepOtherSwitch">
+              <input type="checkbox" id="sepOther">
+              <span class="slider"></span>
+            </label>
+          </legend>
+          <table>
+            <tr>
+              <td>
+                <label class="switch" id="vgaSwitch">
+                  <input type="checkbox" id="vga">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="vga">VGA</label></td>
+              <td>
+                <label class="switch" id="vgjSwitch">
+                  <input type="checkbox" id="vgj">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="vgj">VGJ</label></td>
+              <td>
+                <label class="switch" id="vgySwitch">
+                  <input type="checkbox" id="vgy">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="vgy">VGY</label></td>
+              <td>
+                <label class="switch" id="soaSwitch">
+                  <input type="checkbox" id="soa">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="soa">SOA</label></td>
+              <td>
+                <label class="switch" id="soawlSwitch">
+                  <input type="checkbox" id="soawl">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="soawl">SOAWL</label></td>
+              <td>
+                <label class="switch" id="sojSwitch">
+                  <input type="checkbox" id="soj">
+                  <span class="slider"></span>
+                </label>
+              </td>
+              <td><label for="soj">SOJ</label></td>
+            </tr>
+          </table>
+        </fieldset>
+      </div>
+      <div class="option">
         <h1>Receipt Font</h1>
         <select id="receiptFont">
           <option value="MPL">MPL (36px)</option>
