--- a/browserAction/popup.html
+++ b/browserAction/popup.html
@@ -9,9 +9,9 @@
   <body>
     <div id="mainWrapper">
       <h1>Tools</h1>
-      <div id="problemItem">Generate Problem Item Form</div>
+      <div id="problemItem">SCLS Problem Item Form</div>
       <div id="lostCard">Add Lost Library Card Note</div>
-      <div id="PSTAT2">Generate PSTAT from secondary address</div>
+      <div id="PSTAT2">Set PSTAT from Alternate Address</div>
       <div id="paymentPlan">Add MPL Payment Plan Note</div>
       <h1>Shortcuts</h1>
       <div><a id="shortcut1" href="" target="_blank"></a></div>
