--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -20,30 +20,16 @@
         </select>
       </div>
       <div class="option">
-        <h1>Additional Patron Messages</h1>
+        <h1>Parse Patron Addresses</h1>
         <table>
           <tr>
             <td>
-              <label class="switch" id="patronMsgSwitch">
-                <input type="checkbox" id="patronMsg">
+              <label class="switch" id="parseAddrSwitch">
+                <input type="checkbox" id="parseAddr">
                 <span class="slider"></span>
               </label>
             </td>
-            <td><label for="patronMsg">Replace several of LibLime's predefined patron messages with messages more often used by MPL circ</label></td>
-          </tr>
-        </table>
-      </div>
-      <div class="option">
-        <h1>Validate Madison Addresses</h1>
-        <table>
-          <tr>
-            <td>
-              <label class="switch" id="validAddrSwitch">
-                <input type="checkbox" id="validAddr">
-                <span class="slider"></span>
-              </label>
-            </td>
-            <td><label for="validAddr">Alerts library staff when an unacceptable or restricted Madison address has been entered</label></td>
+            <td><label for="parseAddr">TODO: description</label></td>
           </tr>
         </table>
       </div>
