--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -65,8 +65,13 @@
       <div class="option">
         <h1>Receipt Font Size</h1>
         <select id="receiptFont">
-          <option value="MPL">MPL (36px)</option>
-          <option value="MOO">MOO (28px)</option>
+          <option value="26px">26px</option>
+          <option value="28px">28px (MOO)</option>
+          <option value="30px">30px</option>
+          <option value="32px">32px</option>
+          <option value="34px">34px</option>
+          <option value="36px">36px (MPL)</option>
+          <option value="38px">38px</option>
         </select>
         <p>Determines the font size for the patron barcode printing function. Contact <a href="mailto:lschneider@madisonpubliclibrary.org">Lucas Schneider &lt;lschneider@madisonpubliclibrary.org&gt;</a> if your library would like a customized font size.</p>
       </div>
