--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -29,7 +29,7 @@
                 <span class="slider"></span>
               </label>
             </td>
-            <td><label for="parseAddr">TODO: description</label></td>
+            <td><label for="parseAddr">When creating or updating a patron record, compare their address against MPL's list of dorms, restricted addresses, and unacceptable addresses. Dorm addresses are given a special expiration date of May 15 of that academic year. Restricted addresses are automatically made limited use, and unacceptable addresses trigger the save button to be hidden (which could be overridden by staff). In each of these cases, staff are notified of the nature of the address, and a circulation note is automatically entered into the patron's record.</label></td>
           </tr>
         </table>
       </div>
@@ -44,7 +44,7 @@
                 <span class="slider"></span>
               </label>
             </td>
-            <td><label for="restrictPatronFields">TODO: description</label></td>
+            <td><label for="restrictPatronFields">Disable patron record fields that are rarely used by MPL staff to aid in keeping data entry consistant across patron records. If activated, this feature may still be overridden by a checkbox on the patron edit page.</label></td>
           </tr>
         </table>
       </div>
@@ -58,7 +58,7 @@
                 <span class="slider"></span>
               </label>
             </td>
-            <td><label for="updateAccountType">Update JU ➞ AD and LUJ ➞ LU when saving a patron record if the patron is 18 years or older</label></td>
+            <td><label for="updateAccountType">Update JU ➞ AD and LUJ ➞ LU when saving a patron record if the patron is 16 years or older</label></td>
           </tr>
         </table>
       </div>
@@ -91,247 +91,87 @@
       </div>
       <div class="option">
         <h1>Separate Hold Shelf Action List</h1>
-        <p>On the Hold Shelf Action List, you can select from the list of collection codes below to filter those materials into a separate alphabetical list below the standard list of lapsed holds. This is useful for libraries who shelve their CDs or other AV materials separate from their other holds.</p>
+        <p>On the Hold Shelf Action List, you can select from the list of item types below to filter those materials into a separate alphabetical list above the standard list of lapsed holds. This is useful for libraries who shelve their CDs or other AV materials separate from their other holds. If activated, OLLs will apear at the top of the hold list, followed by other activated AV filters, followed by the remainder of items.</p>
         <fieldset>
-          <legend>CDs <label class="switch" id="sepAllCDSwitch">
-              <input type="checkbox" id="sepAllCD">
-              <span class="slider"></span>
-            </label>
-          </legend>
+          <legend>Outer-library Loans</legend>
           <table>
             <tr>
               <td>
-                <label class="switch" id="cdamsSwitch">
-                  <input type="checkbox" id="cdams">
+                <label class="switch" id="illSwitch">
+                  <input type="checkbox" id="ill">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="cdams">CDAMS</label></td>
-              <td>
-                <label class="switch" id="cdamsidSwitch">
-                  <input type="checkbox" id="cdamsid">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="cdamsid">CDAMSID</label></td>
-              <td>
-                <label class="switch" id="cdjmsSwitch">
-                  <input type="checkbox" id="cdjms">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="cdjms">CDJMS</label></td>
-              <td>
-                <label class="switch" id="cdymsSwitch">
-                  <input type="checkbox" id="cdyms">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="cdyms">CDYMS</label></td>
+              <td><label for="ill">OLLs</label></td>
             </tr>
           </table>
         </fieldset>
         <fieldset>
-          <legend>DVDs/Blu-ray <label class="switch" id="sepAllDVDSwitch">
-              <input type="checkbox" id="sepAllDVD">
+          <legend>AV Materials <label class="switch" id="sepAllAVSwitch">
+              <input type="checkbox" id="sepAllAV">
               <span class="slider"></span>
             </label>
           </legend>
           <table>
             <tr>
               <td>
-                <label class="switch" id="dbrafeSwitch">
-                  <input type="checkbox" id="dbrafe">
+                <label class="switch" id="cdSwitch">
+                  <input type="checkbox" id="cd">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dbrafe">DBRAFE</label></td>
+              <td><label for="cd">CDs</label></td>
               <td>
-                <label class="switch" id="dbraffSwitch">
-                  <input type="checkbox" id="dbraff">
+                <label class="switch" id="dvdSwitch">
+                  <input type="checkbox" id="dvd">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dbraff">DBRAFF</label></td>
+              <td><label for="dvd">DVDs</label></td>
               <td>
-                <label class="switch" id="dbraidSwitch">
-                  <input type="checkbox" id="dbraid">
+                <label class="switch" id="dapSwitch">
+                  <input type="checkbox" id="dap">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dbraid">DBRAID</label></td>
+              <td><label for="dap">DAPs</label></td>
               <td>
-                <label class="switch" id="dbranfSwitch">
-                  <input type="checkbox" id="dbranf">
+                <label class="switch" id="avAndOtherSwitch">
+                  <input type="checkbox" id="avAndOther">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dbranf">DBRANF</label></td>
-              <td>
-                <label class="switch" id="dbrarnSwitch">
-                  <input type="checkbox" id="dbrarn">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dbrarn">DBRARN</label></td>
-              <td>
+              <td><label for="avAndOther">AV and other equipment</label></td>
             </tr>
             <tr>
               <td>
-                <label class="switch" id="dbratvSwitch">
-                  <input type="checkbox" id="dbratv">
+                <label class="switch" id="videoSwitch">
+                  <input type="checkbox" id="video">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dbratv">DBRATV</label></td>
+              <td><label for="video">Videos</label></td>
               <td>
-                <label class="switch" id="dbrjSwitch">
-                  <input type="checkbox" id="dbrj">
+                <label class="switch" id="equipmentSwitch">
+                  <input type="checkbox" id="equipment">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dbrj">DBRJ</label></td>
+              <td><label for="equipment">Equipment</label></td>
               <td>
-                <label class="switch" id="dvdafeSwitch">
-                  <input type="checkbox" id="dvdafe">
+                <label class="switch" id="softwareSwitch">
+                  <input type="checkbox" id="software">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dvdafe">DVDAFE</label></td>
+              <td><label for="software">Software</label></td>
               <td>
-                <label class="switch" id="dvdaffSwitch">
-                  <input type="checkbox" id="dvdaff">
+                <label class="switch" id="cassetteSwitch">
+                  <input type="checkbox" id="cassette">
                   <span class="slider"></span>
                 </label>
               </td>
-              <td><label for="dvdaff">DVDAFF</label></td>
-              <td>
-                <label class="switch" id="dvdaidSwitch">
-                  <input type="checkbox" id="dvdaid">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdaid">DVDAID</label></td>
-            </tr>
-            <tr>
-              <td>
-                <label class="switch" id="dvdanfSwitch">
-                  <input type="checkbox" id="dvdanf">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdanf">DVDANF</label></td>
-              <td>
-                <label class="switch" id="dvdarnSwitch">
-                  <input type="checkbox" id="dvdarn">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdarn">DVDARN</label></td>
-              <td>
-                <label class="switch" id="dvdatvSwitch">
-                  <input type="checkbox" id="dvdatv">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdatv">DVDATV</label></td>
-              <td>
-                <label class="switch" id="dvdawlSwitch">
-                  <input type="checkbox" id="dvdawl">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdawl">DVDAWL</label></td>
-              <td>
-                <label class="switch" id="dvdjfeSwitch">
-                  <input type="checkbox" id="dvdjfe">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdjfe">DVDJFE</label></td>
-            </tr>
-            <tr>
-              <td>
-                <label class="switch" id="dvdjhlSwitch">
-                  <input type="checkbox" id="dvdjhl">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdjhl">DVDJHL</label></td>
-              <td>
-                <label class="switch" id="dvdjnfSwitch">
-                  <input type="checkbox" id="dvdjnf">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdjnf">DVDJNF</label></td>
-              <td>
-                <label class="switch" id="dvdjwlSwitch">
-                  <input type="checkbox" id="dvdjwl">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdjwl">DVDJWL</label></td>
-              <td>
-                <label class="switch" id="dvdyfeSwitch">
-                  <input type="checkbox" id="dvdyfe">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="dvdyfe">DVDYFE</label></td>
-            </tr>
-          </table>
-        </fieldset>
-        <fieldset>
-          <legend>Other <label class="switch" id="sepOtherSwitch">
-              <input type="checkbox" id="sepOther">
-              <span class="slider"></span>
-            </label>
-          </legend>
-          <table>
-            <tr>
-              <td>
-                <label class="switch" id="vgaSwitch">
-                  <input type="checkbox" id="vga">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="vga">VGA</label></td>
-              <td>
-                <label class="switch" id="vgjSwitch">
-                  <input type="checkbox" id="vgj">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="vgj">VGJ</label></td>
-              <td>
-                <label class="switch" id="vgySwitch">
-                  <input type="checkbox" id="vgy">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="vgy">VGY</label></td>
-              <td>
-                <label class="switch" id="soaSwitch">
-                  <input type="checkbox" id="soa">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="soa">SOA</label></td>
-              <td>
-                <label class="switch" id="soawlSwitch">
-                  <input type="checkbox" id="soawl">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="soawl">SOAWL</label></td>
-              <td>
-                <label class="switch" id="sojSwitch">
-                  <input type="checkbox" id="soj">
-                  <span class="slider"></span>
-                </label>
-              </td>
-              <td><label for="soj">SOJ</label></td>
+              <td><label for="cassette">Cassettes</label></td>
             </tr>
           </table>
         </fieldset>
