--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -20,6 +20,19 @@
         </select>
       </div>
       <div class="option">
+        <h1>Receipt Font Size</h1>
+        <select id="receiptFont">
+          <option value="26px">26px</option>
+          <option value="28px">28px (MOO)</option>
+          <option value="30px">30px</option>
+          <option value="32px">32px</option>
+          <option value="34px">34px</option>
+          <option value="36px">36px (MPL)</option>
+          <option value="38px">38px</option>
+        </select>
+        <p>Determines the font size for the patron barcode printing function. Contact <a href="mailto:lschneider@madisonpubliclibrary.org">Lucas Schneider &lt;lschneider@madisonpubliclibrary.org&gt;</a> if your library would like a customized font size.</p>
+      </div>
+      <div class="option">
         <h1>Parse Patron Addresses</h1>
         <table>
           <tr>
@@ -33,7 +46,6 @@
           </tr>
         </table>
       </div>
-
       <div class="option">
         <h1>Restrict Patron Fields</h1>
         <table>
@@ -45,6 +57,20 @@
               </label>
             </td>
             <td><label for="restrictPatronFields">Disable patron record fields that are rarely used by MPL staff to aid in keeping data entry consistant across patron records. If activated, this feature may still be overridden by a checkbox on the patron edit page.</label></td>
+          </tr>
+        </table>
+      </div>
+      <div class="option">
+        <h1>Add Patron Notes</h1>
+        <table>
+          <tr>
+            <td>
+              <label class="switch" id="addPatronNotesSwitch">
+                <input type="checkbox" id="addPatronNotes">
+                <span class="slider"></span>
+              </label>
+            </td>
+            <td><label for="addPatronNotes">Add additional predefined patron notes for laptop agreements, requiring a library card at the next checkout, returned mail and bounced emails.</label></td>
           </tr>
         </table>
       </div>
@@ -61,19 +87,6 @@
             <td><label for="updateAccountType">Update JU ➞ AD and LUJ ➞ LU when saving a patron record if the patron is 16 years or older</label></td>
           </tr>
         </table>
-      </div>
-      <div class="option">
-        <h1>Receipt Font Size</h1>
-        <select id="receiptFont">
-          <option value="26px">26px</option>
-          <option value="28px">28px (MOO)</option>
-          <option value="30px">30px</option>
-          <option value="32px">32px</option>
-          <option value="34px">34px</option>
-          <option value="36px">36px (MPL)</option>
-          <option value="38px">38px</option>
-        </select>
-        <p>Determines the font size for the patron barcode printing function. Contact <a href="mailto:lschneider@madisonpubliclibrary.org">Lucas Schneider &lt;lschneider@madisonpubliclibrary.org&gt;</a> if your library would like a customized font size.</p>
       </div>
       <div class="option">
         <h1>Sunday Dropbox Mode</h1>
