Laptop Form progress

--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -89,6 +89,20 @@
         </table>
       </div>
       <div class="option">
+        <h1>MPL Laptop Form</h1>
+        <table>
+          <tr>
+            <td>
+              <label class="switch" id="laptopFormSwitch">
+                <input type="checkbox" id="laptopForm">
+                <span class="slider"></span>
+              </label>
+            </td>
+            <td><label for="laptopForm">Include the MPL form for gathering laptop checkout data on the browser action button popup.</label></td>
+          </tr>
+        </table>
+      </div>
+      <div class="option">
         <h1>Sunday Dropbox Mode</h1>
         <table>
           <tr>
