Laptop CKO and sort item history progress

--- a/browserAction/popup.html
+++ b/browserAction/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="popup.css" />
   </head>
   <body>
-    <div id="mainWrapper">
+    <div id="defaultMenu" class="mainWrapper">
       <h1>Tools</h1>
       <div id="problemItem">SCLS Problem Item Form</div>
       <div id="lostCard">Add Lost Library Card Note</div>
