Created input fields

--- a/browserAction/popupLaptops.html
+++ b/browserAction/popupLaptops.html
@@ -34,6 +34,14 @@
 
     <div id="laptopMenu" class="mainWrapper">
       <h1>Laptop Checkout</h1>
+      <p>Patron Barcode: </p> 
+        <input type-"text" id="barcode" value=" ">
+      <p>Laptop ID: </p>
+        <input type="text" id="laptopId" value=" ">
+      <p>Num of Accessories: </p>
+        <input type="number" id="accessories" min>
+        
+      <input type="submit" value="Submit">
     </div>
 
     <div id="prefWrapper"><a id="prefs">Extension Preferences</a></div>
