--- a/browserAction/popupLaptops.html
+++ b/browserAction/popupLaptops.html
@@ -39,7 +39,7 @@
       <p>Laptop ID: </p>
         <input type="text" id="laptopId" value=" ">
       <p>Num of Accessories: </p>
-        <input type="number" id="accessories" min>
+        <input type="number" id="accessories" min=0 max=4>
         
       <input type="submit" value="Submit">
     </div>
