--- a/browserAction/popupLaptops.html
+++ b/browserAction/popupLaptops.html
@@ -37,7 +37,7 @@
         <h1>Laptop Checkout</h1>
         <table>
           <label for="Barcode">Patron Barcode: </label>
-          <input type-"text" id="anyNumber" name="barcode" maxlength="14" placeholder="29078012345678" required> <br>
+          <input type="text" id="anyNumber" name="barcode" maxlength="14" placeholder="29078012345678" required> <br>
             
           <label for="LaptopId">Laptop/iPad ID: </label>
           <input type="text" id="laptopId" name="laptopId" list="l1" placeholder="PC1-A1" maxlength="6" required>
