Add fastaddWarning.js ; correct datetimes for CST

--- a/problemItemForm/problemItemForm.html
+++ b/problemItemForm/problemItemForm.html
@@ -173,7 +173,7 @@
         <b>Patron Barcode:</b>
         <input id="patronBarcode" type="text" maxlength="14">
         <button id="getPatronData">Get patron data from barcode</button>
-        <div id="patronDataErrMsg" style="display: none;"></div>
+        <div id="patronDataErrMsg" style="display: none;">[Could not retrieve data with given barcode.]</div>
       </div>
       <fieldset class="optional">
         <legend class="optionalLabel">Optional</legend>
