Update parse patron address feature

--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -15,6 +15,7 @@
           <optgroup label="Library">
             <option value="MAD">MAD</option>
             <option value="MID">MID</option>
+            <option value="PCPL">PCPL</option>
             <option value="SUN">SUN</option>
           </optgroup>
         </select>
