--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -104,6 +104,20 @@
         </table>
       </div>
       <div class="option">
+        <h1>Problem Form &#8211; Find Item Data in Background</h1>
+        <table>
+          <tr>
+            <td>
+              <label class="switch" id="silentItemDataSwitch">
+                <input type="checkbox" id="silentItemData">
+                <span class="slider"></span>
+              </label>
+            </td>
+            <td><label for="silentItemData">Bibliovation item detail pages will be opened in the background so that you may continue to fill out the problem form while data is being gathered. Enabling this option will reduce the speed that item data may be retrieved.</label></td>
+          </tr>
+        </table>
+      </div>
+      <div class="option">
         <h1>Separate Hold Shelf Action List</h1>
         <p>On the Hold Shelf Action List, you can select from the list of item types below to filter those materials into a separate alphabetical list above the standard list of lapsed holds. This is useful for libraries who shelve their CDs or other AV materials separate from their other holds. If activated, OLLs will apear at the top of the hold list, followed by other activated AV filters, followed by the remainder of items.</p>
         <fieldset>
