Web use only progress

--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -90,6 +90,20 @@
         </table>
       </div>
       <div class="option">
+        <h1>MAD Internet Cards</h1>
+        <table>
+          <tr>
+            <td>
+              <label class="switch" id="madInternetCardsSwitch">
+                <input type="checkbox" id="madInternetCards">
+                <span class="slider"></span>
+              </label>
+            </td>
+            <td><label for="madInternetCards">Automatically fills in a number of patron fields when the account type is set to "WEB use ONLY"</label></td>
+          </tr>
+        </table>
+      </div>
+      <div class="option">
         <h1>Sunday Dropbox Mode</h1>
         <table>
           <tr>
