--- a/optionsPage/options.html
+++ b/optionsPage/options.html
@@ -90,16 +90,16 @@
         </table>
       </div>
       <div class="option">
-        <h1>MAD Internet Cards</h1>
+        <h1>MPL Internet Cards</h1>
         <table>
           <tr>
             <td>
-              <label class="switch" id="madInternetCardsSwitch">
-                <input type="checkbox" id="madInternetCards">
+              <label class="switch" id="mplInternetCardsSwitch">
+                <input type="checkbox" id="mplInternetCards">
                 <span class="slider"></span>
               </label>
             </td>
-            <td><label for="madInternetCards">Automatically fills in a number of patron fields when the account type is set to "WEB use ONLY"</label></td>
+            <td><label for="mplInternetCards">Automatically fills in a number of patron fields when the account type is set to "WEB use ONLY." This feature is only intended for use by the Madison libraries.</label></td>
           </tr>
         </table>
       </div>
