--- a/problemItemForm/problemItemForm.html
+++ b/problemItemForm/problemItemForm.html
@@ -48,6 +48,7 @@
         <option value="MAR">Marshall Library (MAR)</option>
         <option value="MAZ">Mazomanie Library (MAZ)</option>
         <option value="MCF">McFarland - E.D. Locke Library (MCF)</option>
+        <option value="MFD">Everett Roehl Marshfield Public Library (MFD)</option>
         <option value="MID">Middleton Library (MID)</option>
         <option value="MOO">Monona Library (MOO)</option>
         <option value="MRO">Monroe PL-Green County (MRO)</option>
