Add RIO & MRS to PI form

--- a/problemItemForm/problemItemForm.html
+++ b/problemItemForm/problemItemForm.html
@@ -50,6 +50,7 @@
         <option value="MCF">McFarland - E.D. Locke Library (MCF)</option>
         <option value="MFD">Everett Roehl Marshfield Public Library (MFD)</option>
         <option value="MID">Middleton Library (MID)</option>
+        <option value="MRS">Mobile Reading Service (MRS)</option>
         <option value="MOO">Monona Library (MOO)</option>
         <option value="MRO">Monroe PL-Green County (MRO)</option>
         <option value="MNT">Monticello Library (MNT)</option>
@@ -68,6 +69,7 @@
         <option value="POY">Poynette Library (POY)</option>
         <option value="RAN">Randolph - Hutchinson Memorial Library (RAN)</option>
         <option value="REE">Reedsburg Library (REE)</option>
+        <option value="RIO">Rio Community Library (RIO)</option>
         <option value="RKS">Rock Springs Library (RKS)</option>
         <option value="PDS">Ruth Culver Community Library (PDS)</option>
         <option value="SCA">SCLS Headquarters (SCA)</option>
