--- a/customPicklistSort/picklistSort.html
+++ b/customPicklistSort/picklistSort.html
@@ -4,6 +4,7 @@
     <title>MPL Custom Picklist Sorter</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="picklistSort.css">
+		<script src="codeObjects.js"></script>
 		<script src="../lib/papaparse.js"></script>
   </head>
   <body>
@@ -26,8 +27,19 @@
         </ol>
         <p id="noConfig">Sort order not configured. Please edit the extension settings.</p>
         <input id="picklistCSV" type="file" accept=".csv">
-      </div>
-    </section>
+      </section>
+      <!--<section>
+        <h2>Picture Book Order</h2>
+        <div id="pbjfiList">
+        </div>
+      </section>
+      <section>
+        <h2>Collection Code Order</h2>
+        <table>
+          <tr><th>Location</th><th>Collection</th><th>Interfiled with Code Below?</th><th>
+        </table>
+      </section>-->
+    </div>
     <script src="picklistSort.js"></script>
   </body>
 </html>
