--- a/customPicklistSort/picklistSort.html
+++ b/customPicklistSort/picklistSort.html
@@ -12,7 +12,7 @@
     <div id="print">
       <h1>Holds Queue (<span id="queueLength"></span> items)</h1>
       <table id="picklist">
-        <tr><th>Title</th><th>Loc.</th><th>Collection</th><th>Call No.</th><th>Barcode</th></tr>
+        <tr id="picklistHeaders"><th>Title</th><th>Loc.</th><th>Collection</th><th>Call No.</th><th>Barcode</th></tr>
       </table>
     </div>
     <div id="screen">
