--- a/printBarcode/printBarcode.html
+++ b/printBarcode/printBarcode.html
@@ -4,10 +4,12 @@
   <title>Printing barcode...</title>
   <meta charset="utf-8" />
   <script type="text/javascript" src="printBarcodeListener.js"></script>
+  <script type="text/javascript" src="../lib/JsBarcode.all.js"></script>
+  <style>.hide { display: none; }</style>
 </head>
-<body>
-<div id="barcode">
-</div>
+<body style="font-family: sans-serif;">
+<div id="barcode" class="hide"></div>
+<svg id="barcodeImg" class="hide"></svg>
 <br />
 <br />
 <br />
