--- a/browserAction/popup.html
+++ b/browserAction/popup.html
@@ -12,6 +12,7 @@
       <div id="lostCard">Add Lost Library Card Note</div>
       <div id="PSTAT2">Set PSTAT from Alternate Address</div>
       <div id="customPicklistSort">Custom Picklist Sorter</div>
+      <div id="weedingSlip">MPL Withdrawal Slip</div>
       <h1>Shortcuts</h1>
       <div><a id="shortcut1" href="" target="_blank"></a></div>
       <div><a id="shortcut2" href="" target="_blank"></a></div>
