--- a/weedingSlip/weedingSlip.html
+++ b/weedingSlip/weedingSlip.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="weedingSlip.css" />
-  <title>Weeding Slip</title>
+  <title>Withdrawal Slip</title>
 </head>
 
 <body>
@@ -60,8 +60,8 @@
       <fieldset>
         <legend><a target="_blank" href="https://www.wiscat.net/ext/validateglobal.php?cid=stwi&lid=stwi&dataid=183">NoveList</a><span class="ext">🡕</span></legend>
         <div>
-          <p style="margin-top: 0;font-style: italic;">Fill out only for BKAFI, BKAFIMY, BKAFIFA, BKAFISF</p>
-          <input id="inNoveList" type="checkbox" disabled>
+          <p style="margin-top: 0;font-style: italic;">Applicable for fiction materials.</p>
+          <input id="inNoveList" type="checkbox">
           <label for="inNoveList">In the NoveList database</label>
         </div>
         <div id="noveListWrap">
